# chatbot-tools

./: README.md  docker-compose.yaml  prometheus.yml
fastRAG/: .gitignore  README.md  pyproject.toml
fastRAG/.fastrag/source/625085458158746921/: sample.json
fastRAG/fastrag/: __init__.py
fastRAG/fastrag/cache/: entry.py  filters.py
fastRAG/fastrag/cache/impl/: local.py
fastRAG/fastrag/config/: config.py
fastRAG/fastrag/helpers/: filters.py
fastRAG/fastrag/steps/: step.py
fastRAG/fastrag/steps/fetchers/: http.py  path.py
fastRAG/fastrag/steps/fetchers/rate_limiting/: domain.py
fastRAG/fastrag/steps/impl/: benchmarking.py
fastRAG/fastrag/steps/parsing/: file.py  html.py
fastRAG/resources/: config.yaml  test.yaml
fastRAG/resources/test/: sample.json
fastRAG/resources/test/plugins/loaders/: json.py  test.json
fastRAG/src/fastrag/: __init__.py  __main__.py  constants.py  data.py  embeddings.py  events.py  main.py  plugins.py  serve.py  settings.py  sources.py  systems.py  utils.py
fastRAG/src/fastrag/benchmarking/: __init__.py  benchmarker.py
fastRAG/src/fastrag/cache/: __init__.py  cache.py  entry.py  filters.py
fastRAG/src/fastrag/cache/impl/: local.py
fastRAG/src/fastrag/chunking/: __init__.py  chunker.py
fastRAG/src/fastrag/chunking/impl/: recursive.py
fastRAG/src/fastrag/config/: __init__.py  config.py  env.py
fastRAG/src/fastrag/config/loaders/: __init__.py  loader.py  yaml.py
fastRAG/src/fastrag/config/loaders/impl/: json.py  (+2 more)
fastRAG/src/fastrag/embeddings/: __init__.py
fastRAG/src/fastrag/embeddings/embedders/: embedder.py
fastRAG/src/fastrag/fetchers/: __init__.py  directory.py  fetcher.py  http.py  path.py  sitemap.py  source.py  text.py
fastRAG/src/fastrag/fetchers/impl/: __init__.py  directory.py  file.py  http.py  path.py  sitemap.py
fastRAG/src/fastrag/helpers/: __init__.py  constants.py  filters.py  path_field.py  utils.py
fastRAG/src/fastrag/llms/: llm.py  openai.py
fastRAG/src/fastrag/parsing/: __init__.py  file.py  html.py  parser.py
fastRAG/src/fastrag/parsing/impl/: __init__.py  file.py  html.py
fastRAG/src/fastrag/plugins/: __init__.py  base.py  condition.py  loader.py  registry.py  utils.py
fastRAG/src/fastrag/runner/: arunner.py  runner.py
fastRAG/src/fastrag/steps/: __init__.py  entries.py  logs.py  step.py  steps.py  task.py
fastRAG/src/fastrag/steps/fetchers/: __init__.py  crawler.py  fetcher.py  http.py  path.py  sitemap.py
fastRAG/src/fastrag/steps/impl/: arunner.py  benchmarking.py  chunking.py  embedding.py  fetching.py  parsing.py  source.py
fastRAG/src/fastrag/steps/parsing/: __init__.py  file.py  html.py  parsing.py
fastRAG/src/fastrag/stores/: milvus.py  store.py
(+278 files in other folders)
