[project]
name = "fastrag"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "AgrospAI", email = "agrospai@udl.cat" }]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dacite>=1.9.2",
    "fastapi>=0.128.0",
    "html-to-markdown>=2.14.11",
    "httpx>=0.28.1",
    "humanize>=4.14.0",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.7",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.7",
    "pypandoc>=1.16.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
fastrag = "fastrag:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.0", "ruff>=0.14.7"]

[tool.ruff]
line-length = 96

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
