[project]
name = "fastrag"
version = "0.1.0"
description = "CLI tool to manage the lifecycle of a RAG"
readme = "README.md"
authors = [
    { name = "AgrospAI", email = "agrospai@udl.cat" },
    { name = "Christian López García", email = "christian.lopez@udl.cat" },
    { name = "Zihan Chen", email = "zihan.chen@udl.cat" },
    { name = "Jordi García Ventura", email = "jordi.garcia@udl.cat" },
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dacite>=1.9.2",
    "html-to-markdown>=2.14.11",
    "httpx>=0.28.1",
    "humanize>=4.14.0",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.7",
    "pypandoc>=1.16.2",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
fastrag = "fastrag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.14.7"]

[project.urls]
Homepage = "https://github.com/AgrospAI/chatbot-tools"
Issues = "https://github.com/AgrospAI/chatbot-tools/issues"

[tool.hatch.build.targets.sdist]
include = ["fastrag"]

[tool.hatch.build.targets.wheel]
packages = ["fastrag"]
include = ["fastrag"]
